# RemakePlaceAutoupdater

./: .gitignore  README.md  build.bat  build.py  config.json  instructions.txt  launch_updater.bat  metadata.json  requirements.txt  setup.py  tauri-implementation-plan.md  updater.py
.github/workflows/: build-release.yml
ReMakeplaceUpdater/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ReMakeplaceUpdater/src/: main.ts  style.css  style.css.backup  types.ts
ReMakeplaceUpdater/src-tauri/: 2  Cargo.toml  tauri.conf.json
ReMakeplaceUpdater/src-tauri/capabilities/: default.json
ReMakeplaceUpdater/src-tauri/src/: companion.rs  config.rs  downloader.rs  error_handler.rs  extractor.rs  gallery.rs  launcher.rs  lib.rs  main.rs  retry_manager.rs  updater.rs
