[package]
name = "remakeplaceupdater"
version = "1.2.7"
description = "Auto updater for ReMakeplace"
authors = ["Hol"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "remakeplaceupdater_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
# Multiple compression libraries for better fallback support
sevenz-rust = "0.6"  # Updated to latest version
zip = "2.0"          # Updated to latest version  
tar = "0.4"          # For tar archives
flate2 = "1.0"       # For gzip/deflate
xz2 = "0.1"          # For xz/lzma compression
bzip2 = "0.4"        # For bzip2 compression
zstd = "0.13"        # For zstd compression
# Other dependencies
semver = "1.0"
dirs = "5.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
futures-util = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

